allow validating user by 'username'
